Bug fixed! Update method to get Distrubuted state instance from jar in order to avoid dinacally loading of the same path from multiple jar